--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sas-sdk",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "repository": "git@github.com:lukema95/sas-sdk.git",
   "author": "Luke Ma <lukema95@gmail.com>",
   "license": "MIT",
