--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "@mysten/sui": "^1.4.0"
+    "@mysten/sui": "^1.4.0",
+    "dotenv": "^16.4.5"
   }
 }
