--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sas-sdk",
+  "name": "mas-sdk",
   "version": "1.0.0",
   "main": "./dist/index.js",
   "repository": "git@github.com:lukema95/sas-sdk.git",
