--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
-  "name": "mas-sdk",
-  "version": "0.0.1-beta.1",
+  "name": "@lukema/mas-sdk",
+  "version": "0.0.2-beta",
   "main": "./dist/index.js",
   "repository": "git@github.com:lukema95/mas-sdk.git",
+  "publishConfig": {
+    "access": "public"
+  },
+  "files": [
+    "dist",
+    "src",
+    "test",
+    "README.md"
+  ],
   "author": "Luke Ma <lukema95@gmail.com>",
   "license": "MIT",
   "types": "./dist/index.d.ts",
