--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lukema/mas-sdk",
-  "version": "0.0.8-beta",
+  "version": "0.0.10-beta",
   "main": "./dist/index.js",
   "repository": "git@github.com:lukema95/mas-sdk.git",
   "publishConfig": {
@@ -26,8 +26,10 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "@mysten/sui": "^1.4.0",
+    "@aptos-labs/ts-sdk": "^1.27.1",
     "@mysten/bcs": "^1.0.3",
+    "@mysten/sui": "^1.4.0",
+    "@thalalabs/surf": "^1.7.3",
     "dotenv": "^16.4.5"
   }
 }
