--- a/package.json
+++ b/package.json
@@ -21,15 +21,17 @@
     "dev": "ts-node src/index.ts"
   },
   "devDependencies": {
-    "@types/node": "^22.1.0",
+    "@types/node": "^22.15.21",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@aptos-labs/ts-sdk": "^1.27.1",
-    "@mysten/bcs": "^1.0.3",
-    "@mysten/sui": "^1.4.0",
-    "@thalalabs/surf": "^1.7.3",
-    "dotenv": "^16.4.5"
+    "@aptos-labs/ts-sdk": "^2.0.1",
+    "@mysten/bcs": "^1.6.1",
+    "@mysten/sui": "^1.30.1",
+    "@thalalabs/surf": "^1.9.6",
+    "dotenv": "^16.5.0",
+    "got": "^14.4.7"
   }
 }
